@@ -1,11 +1,14 @@
 package repository;
 
+import fileService.FileService;
 import model.Contact;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 
 import java.io.ByteArrayInputStream;
+import java.io.File;
 import java.util.List;
 import java.util.Scanner;
 
@@ -20,17 +23,19 @@ public class UpdateActionMoveTest {
 
     private SearchActionMove searchActionMove;
 
+    private FileService fileService;
+
+    private File testFile;
 
     @BeforeEach
     void setUp() {
+        fileService = new FileService();
+        testFile = new File("test_contacts.json");
         updateActionMove = new UpdateActionMove();
         searchActionMove = new SearchActionMove();
-
         contactList = List.of(
                 new Contact("Aibek", "Mahronovich", "China", "+996 666 666 666")
         );
-
-
     }
 
     @Test
@@ -54,20 +59,30 @@ public class UpdateActionMoveTest {
         updateActionMove.setSearch(searchActionMove);
 
         updateActionMove.updateContactByName(contactList);
-        System.out.println(contactList);
+        fileService.write(contactList);
 
-        assertEquals("Michael", contactList.getFirst().getName());
-        assertEquals("Williams", contactList.getFirst().getSurname());
-        assertEquals("France 93A", contactList.getFirst().getAddress());
-        assertEquals("+996 555 555 555", contactList.getFirst().getPhone());
+
+        assertEquals("Michael", contactList.get(0).getName());
+        assertEquals("Williams", contactList.get(0).getSurname());
+        assertEquals("France 93A", contactList.get(0).getAddress());
+        assertEquals("+996 555 555 555", contactList.get(0).getPhone());
+
+        List<Contact> readContacts = fileService.read();
+
+        assertEquals(1, readContacts.size(), "File should contain exactly 1 contact");
+        assertEquals("Michael", readContacts.get(0).getName(), "Contact name in file should be 'Azidin'");
+        assertEquals("Williams", readContacts.get(0).getSurname(), "Contact last name in file should be 'Amankulov'");
+        assertEquals("France 93A", readContacts.get(0).getAddress(), "Contact address in file should be 'Japan'");
+        assertEquals("+996 555 555 555", readContacts.get(0).getPhone(), "Contact phone in file should be '777 777 777'");
     }
+
 
     @Test
     @DisplayName("Test for invalid input during update by 'name'")
     void updateInvalidContactByNameTest() {
         String simulatedInput = """
                 Aibek
-                invalidIndex
+                2
                 """;
         System.setIn(new ByteArrayInputStream(simulatedInput.getBytes()));
         Scanner sharedScanner = new Scanner(System.in);
@@ -77,13 +92,22 @@ public class UpdateActionMoveTest {
 
         updateActionMove.setSearch(searchActionMove);
 
-        Contact originalContact = contactList.getFirst();
+        Contact originalContact = contactList.get(0);
         updateActionMove.updateContactByName(contactList);
+        fileService.write(contactList);
 
-        assertEquals(originalContact.getName(), contactList.getFirst().getName());
-        assertEquals(originalContact.getSurname(), contactList.getFirst().getSurname());
-        assertEquals(originalContact.getAddress(), contactList.getFirst().getAddress());
-        assertEquals(originalContact.getPhone(), contactList.getFirst().getPhone());
+
+        assertEquals(originalContact.getName(), contactList.get(0).getName());
+        assertEquals(originalContact.getSurname(), contactList.get(0).getSurname());
+        assertEquals(originalContact.getAddress(), contactList.get(0).getAddress());
+        assertEquals(originalContact.getPhone(), contactList.get(0).getPhone());
+
+        List<Contact> readContacts = fileService.read();
+
+        assertEquals(originalContact.getName(), readContacts.get(0).getName());
+        assertEquals(originalContact.getSurname(), readContacts.get(0).getSurname());
+        assertEquals(originalContact.getAddress(), readContacts.get(0).getAddress());
+        assertEquals(originalContact.getPhone(), readContacts.get(0).getPhone());
 
     }
 
@@ -108,12 +132,21 @@ public class UpdateActionMoveTest {
         updateActionMove.setSearch(searchActionMove);
 
         updateActionMove.updateContactBySurname(contactList);
-        System.out.println(contactList);
+        fileService.write(contactList);
 
-        assertEquals("Michael", contactList.getFirst().getName());
-        assertEquals("Williams", contactList.getFirst().getSurname());
-        assertEquals("France 93A", contactList.getFirst().getAddress());
-        assertEquals("+996 555 555 555", contactList.getFirst().getPhone());
+        assertEquals("Michael", contactList.get(0).getName());
+        assertEquals("Williams", contactList.get(0).getSurname());
+        assertEquals("France 93A", contactList.get(0).getAddress());
+        assertEquals("+996 555 555 555", contactList.get(0).getPhone());
+
+        List<Contact> readContacts = fileService.read();
+
+        assertEquals("Michael", readContacts.get(0).getName());
+        assertEquals("Williams", readContacts.get(0).getSurname());
+        assertEquals("France 93A", readContacts.get(0).getAddress());
+        assertEquals("+996 555 555 555", readContacts.get(0).getPhone());
+
+
     }
 
     @Test
@@ -131,13 +164,22 @@ public class UpdateActionMoveTest {
 
         updateActionMove.setSearch(searchActionMove);
 
-        Contact originalContact = contactList.getFirst();
+        Contact originalContact = contactList.get(0);
         updateActionMove.updateContactBySurname(contactList);
+        fileService.write(contactList);
 
-        assertEquals(originalContact.getName(), contactList.getFirst().getName());
-        assertEquals(originalContact.getSurname(), contactList.getFirst().getSurname());
-        assertEquals(originalContact.getAddress(), contactList.getFirst().getAddress());
-        assertEquals(originalContact.getPhone(), contactList.getFirst().getPhone());
+
+        assertEquals(originalContact.getName(), contactList.get(0).getName());
+        assertEquals(originalContact.getSurname(), contactList.get(0).getSurname());
+        assertEquals(originalContact.getAddress(), contactList.get(0).getAddress());
+        assertEquals(originalContact.getPhone(), contactList.get(0).getPhone());
+
+        List<Contact> foundContact = fileService.read();
+
+        assertEquals(originalContact.getName(), foundContact.get(0).getName());
+        assertEquals(originalContact.getSurname(), foundContact.get(0).getSurname());
+        assertEquals(originalContact.getAddress(), foundContact.get(0).getAddress());
+        assertEquals(originalContact.getPhone(), foundContact.get(0).getPhone());
 
     }
 
@@ -162,12 +204,20 @@ public class UpdateActionMoveTest {
         updateActionMove.setSearch(searchActionMove);
 
         updateActionMove.updateContactByAddress(contactList);
-        System.out.println(contactList);
+        fileService.write(contactList);
 
-        assertEquals("Michael", contactList.getFirst().getName());
-        assertEquals("Williams", contactList.getFirst().getSurname());
-        assertEquals("France 93A", contactList.getFirst().getAddress());
-        assertEquals("+996 555 555 555", contactList.getFirst().getPhone());
+
+        assertEquals("Michael", contactList.get(0).getName());
+        assertEquals("Williams", contactList.get(0).getSurname());
+        assertEquals("France 93A", contactList.get(0).getAddress());
+        assertEquals("+996 555 555 555", contactList.get(0).getPhone());
+
+        List<Contact> foundContact = fileService.read();
+
+        assertEquals("Michael", foundContact.get(0).getName());
+        assertEquals("Williams", foundContact.get(0).getSurname());
+        assertEquals("France 93A", foundContact.get(0).getAddress());
+        assertEquals("+996 555 555 555", foundContact.get(0).getPhone());
     }
 
     @Test
@@ -185,13 +235,22 @@ public class UpdateActionMoveTest {
 
         updateActionMove.setSearch(searchActionMove);
 
-        Contact originalContact = contactList.getFirst();
+        Contact originalContact = contactList.get(0);
         updateActionMove.updateContactByAddress(contactList);
+        fileService.write(contactList);
 
-        assertEquals(originalContact.getName(), contactList.getFirst().getName());
-        assertEquals(originalContact.getSurname(), contactList.getFirst().getSurname());
-        assertEquals(originalContact.getAddress(), contactList.getFirst().getAddress());
-        assertEquals(originalContact.getPhone(), contactList.getFirst().getPhone());
+        assertEquals(originalContact.getName(), contactList.get(0).getName());
+        assertEquals(originalContact.getSurname(), contactList.get(0).getSurname());
+        assertEquals(originalContact.getAddress(), contactList.get(0).getAddress());
+        assertEquals(originalContact.getPhone(), contactList.get(0).getPhone());
+
+        List<Contact> foundContact = fileService.read();
+
+        assertEquals(originalContact.getName(), foundContact.get(0).getName());
+        assertEquals(originalContact.getSurname(), foundContact.get(0).getSurname());
+        assertEquals(originalContact.getAddress(), foundContact.get(0).getAddress());
+        assertEquals(originalContact.getPhone(), foundContact.get(0).getPhone());
+
 
     }
 
@@ -216,11 +275,20 @@ public class UpdateActionMoveTest {
         updateActionMove.setSearch(searchActionMove);
 
         updateActionMove.updateContactByPhone(contactList);
+        fileService.write(contactList);
 
-        assertEquals("Michael", contactList.getFirst().getName());
-        assertEquals("Williams", contactList.getFirst().getSurname());
-        assertEquals("France 93A", contactList.getFirst().getAddress());
-        assertEquals("+996 555 555 555", contactList.getFirst().getPhone());
+        assertEquals("Michael", contactList.get(0).getName());
+        assertEquals("Williams", contactList.get(0).getSurname());
+        assertEquals("France 93A", contactList.get(0).getAddress());
+        assertEquals("+996 555 555 555", contactList.get(0).getPhone());
+
+        List<Contact> foundContact = fileService.read();
+
+        assertEquals("Michael", foundContact.get(0).getName());
+        assertEquals("Williams", foundContact.get(0).getSurname());
+        assertEquals("France 93A", foundContact.get(0).getAddress());
+        assertEquals("+996 555 555 555", foundContact.get(0).getPhone());
+
     }
 
     @Test
@@ -238,15 +306,30 @@ public class UpdateActionMoveTest {
 
         updateActionMove.setSearch(searchActionMove);
 
-        Contact originalContact = contactList.getFirst();
+        Contact originalContact = contactList.get(0);
         updateActionMove.updateContactByPhone(contactList);
+        fileService.write(contactList);
 
-        assertEquals(originalContact.getName(), contactList.getFirst().getName());
-        assertEquals(originalContact.getSurname(), contactList.getFirst().getSurname());
-        assertEquals(originalContact.getAddress(), contactList.getFirst().getAddress());
-        assertEquals(originalContact.getPhone(), contactList.getFirst().getPhone());
+        assertEquals(originalContact.getName(), contactList.get(0).getName());
+        assertEquals(originalContact.getSurname(), contactList.get(0).getSurname());
+        assertEquals(originalContact.getAddress(), contactList.get(0).getAddress());
+        assertEquals(originalContact.getPhone(), contactList.get(0).getPhone());
+
+        List<Contact> foundContact = fileService.read();
+
+        assertEquals(originalContact.getName(), foundContact.get(0).getName());
+        assertEquals(originalContact.getSurname(), foundContact.get(0).getSurname());
+        assertEquals(originalContact.getAddress(), foundContact.get(0).getAddress());
+        assertEquals(originalContact.getPhone(), foundContact.get(0).getPhone());
+
 
     }
 
+    @AfterEach
+    void tearDown() {
+        if (testFile.exists()) {
+            testFile.delete();
+        }
+    }
 
 }
